<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity2">

    <Button
        android:id="@+id/buttonCrearUsuario"
        android:layout_width="345dp"
        android:layout_height="79dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:background="#00000000"
        android:drawableTint="#F6F6F6"
        android:text="@string/crear_usuario"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="191dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="#00000000"
        android:text="@string/ingresar"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawableTint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="285dp"
        android:layout_height="70dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="120dp"
        android:text="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="285dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>